--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ a{
   font-family: 'Muli' !important;
 }
 
+.nav-item{
+  margin-left: 2vw;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
