--- a/src/App.css
+++ b/src/App.css
@@ -94,3 +94,9 @@ pre {
 .navlinklang:hover {
   --bs-link-color-rgb: var(--bs-link-hover-color-rgb)
 }
+
+.page-content img{
+  max-height: 70vh;
+  max-width: 100%;
+  margin-bottom: 1em;
+}
