--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ pre {
   --bs-link-color-rgb: var(--bs-link-hover-color-rgb)
 }
 
-.page-content img{
+.page-content img, .page-content video{
   max-height: 70vh;
   max-width: 100%;
   margin-bottom: 1em;
