--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ body {
   backdrop-filter: blur(6px);
 }
 
-.blur-weak{
+.blur-weak {
   backdrop-filter: blur(2px);
 }
 
@@ -95,8 +95,24 @@ pre {
   --bs-link-color-rgb: var(--bs-link-hover-color-rgb)
 }
 
-.page-content img, .page-content video{
+.page-content img,
+.page-content video {
   max-height: 70vh;
   max-width: 100%;
   margin-bottom: 1em;
+}
+
+.navbar-toggler-icon {
+  filter: invert(100%) grayscale(100%) brightness(400%)
+}
+
+.navbar-toggler {
+  /*
+  border: var(--bs-border-width) solid var(--bs-primary) !important
+  */
+  border: none !important
+}
+
+.navbar-toggler:focus {
+  box-shadow: 0 0 0 2px var(--bs-primary) !important
 }
